--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-This file was created by PyCharm 2.6.3 for binding GitHub repository
+This is an implementation of simple multilayer perceptron.
+
+To train new network create subfolder in 'networks' folder with name <NETWORK NAME> and run script:
+python main.py <NETWORK NAME>
+
+As for now epochs number is fixed inside source code, see main.py
+
+To view results open web server by running following:
+python server.py
+
+It will open it at port 8080, then you can use your browser. It should be clear from now on.
